<resources>

    <string name="app_name">Ordy</string>
    <string name="title_orders">Orders</string>
    <string name="title_groups">Groups</string>
    <string name="title_payments">Payments</string>
    <string name="title_locations">Locations</string>

    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="title_logout">Logout</string>

    <string name="title_create_order">New order</string>
    <string name="title_create_group">New group</string>
    <string name="title_invite_member">Invite Member</string>

    <string name="title_login">Login</string>
    <string name="title_register">Register</string>

    <string name="members">Members:&#160;</string>
    <string name="group_invite_user">Invite</string>
    <string name="group_leave">Leave</string>
    <string name="group_leave_loading">Leaving group…</string>
    <string name="group_rename">Rename</string>
    <string name="group_rename_dialog_tag">New name</string>
    <string name="group_rename_dialog_title">New group-name</string>
    <string name="group_rename_dialog_message">Enter a new name:</string>
    <string name="group_rename_dialog_is_empty">Name cannot be empty.</string>
    <string name="group_rename_successful">Successfully renamed group.</string>
    <string name="create_group_loading">Creating group…</string>

    <string name="group_new_name">Enter new name</string>
    <string name="create_group_name">Group name</string>

    <string name="invite_username_search">Search for usernames to invite</string>
    <string name="invite_title">Search for usernames</string>
    <string name="invite_subtitle">Use the searchbar above to search</string>
    <string name="invite_button">Invite</string>
    <string name="invited_button">Invited!</string>
    <string name="your_invites_title">Your invites</string>
    <string name="no_group_invites_title">No group invites found</string>
    <string name="no_group_invites_description">All invites for groups you receive will be listed here</string>

    <string name="speeddial_order">New order</string>
    <string name="speeddial_group">New group</string>

    <string name="speeddial_order_camera">Take bill image</string>
    <string name="speeddial_order_gallery">Select bill image</string>

    <string name="create_order_input_location">Location</string>
    <string name="create_order_input_deadline">Deadline</string>
    <string name="create_order_input_group">Group</string>

    <string name="create">Create</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user? Create an account!</string>
    <string name="username">Username</string>
    <string name="password_repeat">Repeat password</string>

    <string name="register">Create account</string>
    <string name="register_login">Already have an account? Login now!</string>

    <string name="no_active_orders_title">No active orders found</string>
    <string name="no_active_orders_description">Click the "+"-button to create a new order for one of your groups</string>
    <string name="no_archived_orders_title">No archived orders found</string>
    <string name="no_archived_orders_description">Orders that are 12 hours past deadline will be placed here</string>

    <string name="add_item_order_input_search">Search for an item</string>
    <string name="add_item_order_default_title">Not in the list?</string>
    <string name="add_item_order_default_text">Add \"%1$s\" to your order instead</string>

    <string name="overview_title">Overview</string>

    <string name="order_item_comment">Enter extra comment</string>
    <string name="order_location_input_search">Search for a location</string>
    <string name="pick">Pick</string>
    <string name="no_locations_title">No locations found</string>
    <string name="no_locations_description">Use the searchbar above to search for a location by name</string>
    <string name="locations_default_text">Use location \"%1$s\" instead</string>
    <string name="pick_custom">Pick Custom</string>
    <string name="location_item_default_title">Not in the list?</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_groups_title">No groups found</string>
    <string name="your_groups_title">Your groups</string>
    <string name="no_groups_description">Create or join a group and they will appear here</string>

    <!-- Payments -->
    <string name="payment_user_header">User:&#160;</string>
    <string name="payment_group_header">Group:&#160;</string>

    <!-- Debts -->
    <string name="debts_tab_title">Your debts</string>
    <string name="no_debts_title">No debts found</string>
    <string name="no_debts_description">You currently have no debts</string>
    <string name="debts_search">Search for creditor</string>

    <!-- Debtors -->
    <string name="debtors_tab_title">Debtors</string>
    <string name="no_debtors_title">No debtors found</string>
    <string name="no_debtors_description">Nobody is in your debt</string>
    <string name="mark_as_paid">Paid</string>
    <string name="notify">Notify</string>
    <string name="debtors_search">Search for debtor</string>
    <string name="mark_snackbar_text">Marking as paid…</string>
    <string name="mark_confirm_text">Mark as paid?</string>
    <string name="mark_confirm_text_decription">This will remove %1$s\'s dept from the list.</string>
    <string name="notify_snackbar_loading">Notifying %1$s…</string>
    <string name="notify_snackbar_success">Notified.</string>

    <string name="no_order_items_title">No items found</string>

    <!-- Create Order -->
    <string name="order_create_loading">Creating order…</string>
    <string name="order_create_groups_failed">Unable to fetch your groups</string>
    <string name="order_create_no_group_title">You are not part of any group</string>
    <string name="order_create_no_group_description">Join a group or create one yourself to be able to create an order</string>

    <string name="order_overview_header_deadline">Deadline:&#160;</string>
    <string name="order_overview_header_location">Location:&#160;</string>
    <string name="order_overview_header_courier">Courier:&#160;</string>
    <string name="order_overview_header_closing">Closing in:&#160;</string>
    <string name="order_overview_leave_title">Are you sure?</string>
    <string name="order_overview_leave_message">You are about to leave this group</string>
    <string name="order_overview_leave_error">You are not a member of this group.</string>
    <string name="order_overview_invite_error">Request failed. Please try again…</string>
    <string name="order_overview_header_bill">View bill</string>

    <string name="your_items_title">Your items: </string>
    <string name="add_item_button">Add item</string>
    <string name="no_order_items_description_personal">You have not ordered anything. Click the \"add item\" button to add an item to this order.</string>

    <string name="users_title">Users</string>
    <string name="no_order_items_description">Nobody has ordered anything.</string>

    <string name="add_button">Add</string>

    <string name="list_item_group_creator">Group Creator:&#160;</string>
    <string name="list_item_group_member_count">&#160;members in group</string>
    <string name="list_item_closing_in">Closing in:&#160;</string>
    <string name="list_item_closing_on">Closing on:&#160;</string>
    <string name="list_item_courier">Courier:</string>

    <string name="bill_upload_loading">Uploading bill. Please wait…</string>
    <string name="bill_error_title">Unable to load bill</string>
    <string name="bill_error_description">Unable to load bill for this order. Make sure you have a valid connection and try again!</string>
    <string name="bill_upload_success">Bill has been uploaded.</string>

    <!-- Settings -->
    <string name="settings_title_notifications">Notifications</string>
    <string name="settings_title_other">Other</string>
    <string name="settings_title_licence">Licenses</string>
    <string name="settings_notif_payments_text">Payments</string>
    <string name="settings_notif_deadlines_text">Order deadlines</string>
    <string name="settings_notif_invites_text">Invites</string>
    <string name="settings_notif_orders_text">New orders</string>
    <string name="settings_notif_bill_text">Bill pictures</string>

    <string name="error_timeout">Unable to get response from server. Please check your connection.</string>
    <string name="error_connection">Unable to connect to the server. Please check your internet connection.</string>
    <string name="warning_cached">You seem to be offline, you are now watching an older version that may be outdated.</string>
    <string name="error_picker_past">You cannot select a deadline that has already passed.</string>
    <string name="error_passwords_match">Passwords do not match.</string>

    <string name="error_loading_order">Cannot load this order</string>
    <string name="error_loading_group">Cannot load this group</string>

    <string name="is_favorite_description">Favorite</string>
    <string name="not_favorite_description">Not favorite</string>

    <!-- placeholders for development -->
    <string name="placeholder_name">Bob</string>
    <string name="placeholder_member_count">12</string>
    <string name="placeholder_group_name">Zeus</string>
    <string name="placeholder_location">\'t Blauw Kotje</string>
    <string name="placeholder_closing_date">4/15/20 11:00 AM</string>
    <string name="placeholder_closing_time">10 min</string>
    <string name="placeholder_item_quantity">1x</string>
    <string name="placeholder_product_name">Big pack of fries</string>
    <string name="placeholder_comment">extra salt</string>
    <string name="placeholder_email">bob@mail.com</string>
    <string name="placeholder_date">DD-MM-YY-HH</string>
</resources>