<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Profile -->
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />

    <!-- Settings -->
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom" />

    <!-- Logout -->
    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/title_logout"
        app:showAsAction="never" />
</menu>