<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.orders.overview.users.OrderUsersFragment">

    <data>

        <variable
            name="handlers"
            type="com.ordy.app.ui.orders.overview.users.OrderUsersHandlers" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/users_title" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Data -->
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/order_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/order_items"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@android:color/transparent" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <!-- Empty placeholder -->
            <LinearLayout
                android:id="@+id/order_items_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_order_items_title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_order_items_description" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>